fix(gtk320: menu: coontex-menu: menuitem: accelerator): use mix() instead of alpha() (fix contrast in dark themes) (fixes #88)

--- a/src/gtk-3.20/scss/widgets/_menu.scss
+++ b/src/gtk-3.20/scss/widgets/_menu.scss
@@ -116,7 +116,7 @@ $menu_borders_color: mix(
                 color: $selected_fg_color;
 
                 accelerator {
-                    color: alpha($selected_fg_color, .6);
+                    color: mix($selected_fg_color, $selected_bg_color, .6);
                 }
             }
 
